...
            android:layout_marginStart="16dp"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@id/transaction_category_name_image_view"
            app:layout_constraintTop_toTopOf="@id/transaction_category_name_image_view"
            app:layout_constraintBottom_toBottomOf="@id/transaction_category_name_image_view"
            tools:text="Обед" />

        <TextView
            android:id="@+id/transaction_wallet_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
...
